# balalib

./: Cargo.toml  compile and install linux native.sh  compile and install.cmd  test.lua
.github/: dependabot.yaml
.github/actions-rs/: grcov.yml
.github/workflows/: pull_request.yaml  release.yaml
src/: core.rs  lib.rs  mods.rs  tests.rs  updater.rs  utils.rs
src/schema/: manifest.schema.json
src/scripts/: update.cmd
src/structs/: localmod.rs  mod.rs  modinfo.rs
