[package]
name = "balalib"
version = "1.0.28"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
mlua = { version = "0.9.9", features = ["lua51", "macros", "serialize", "module"] }
serde_json = "1.0.127"
reqwest = { version = "0.12.7", features = ["json", "blocking"] }
serde = { version = "1.0.209", features = ["derive"] }
tar = "0.4.41"
flate2 = "1.0.33"
zip = "2.2.0"
regex = "1.10.6"
jsonschema = "0.21.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
